tracker/tobii: nix build guard tautology

--- a/tracker-tobii-eyex/CMakeLists.txt
+++ b/tracker-tobii-eyex/CMakeLists.txt
@@ -16,7 +16,7 @@ if(WIN32)
         if(FALSE)
             install(FILES ${tobii-dll} DESTINATION ${opentrack-hier-pfx} ${opentrack-perms})
         endif()
-        if((CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows") AND (CMAKE_SYSTEM_NAME STREQUAL "Windows"))
+        if(CMAKE_HOST_SYSTEM_NAME STREQUAL "Windows")
             file(TO_CMAKE_PATH "$ENV{SystemRoot}" sysroot)
             if (IS_DIRECTORY "${sysroot}/SysWOW64")
                 set(src "${sysroot}/SysWOW64")
