cmake: hopefully fix intermittent failure on mrproper

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,10 @@ include(opentrack-boilerplate)
 include(opentrack-version)
 include(opentrack-install)
 
+if(WIN32)
+    enable_language(RC)
+endif()
+
 add_custom_target(mrproper COMMAND cmake -P "${CMAKE_SOURCE_DIR}/cmake/opentrack-clean-build-directory.cmake" WORKING_DIRECTORY "${CMAKE_BINARY_DIR}")
 
 set(C CMakeLists.txt)
